[gd_scene load_steps=2 format=2]

[ext_resource path="res://dataCode/LazersSpawner.gd" type="Script" id=1]

[node name="LaserSpawner" type="Node"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="SpawnTimer1" type="Timer" parent="."]
wait_time = 23.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DifficultyTimer1" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer1" to="." method="_on_SpawnTimer1_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer1" to="." method="_on_DifficultyTimer1_timeout"]
